Import of JIMI/Tk-Markdown-0.02 from CPAN.
gitpan-cpan-distribution: Tk-Markdown
gitpan-cpan-version:      0.02
gitpan-cpan-path:         JIMI/Tk-Markdown-0.02.tar.gz
gitpan-cpan-author:       JIMI
gitpan-cpan-maturity:     released

--- a/.\Tk-Markdown/MYMETA.yml
+++ b/.\Tk-Markdown/MYMETA.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'The great new Tk::Markdown!'
+abstract: 'display markdown in a Text'
 author:
   - 'JimiWills <jimi@webu.co.uk>'
 build_requires:
